update openapi with getTasksByUserId
