# internal/web/tasks/api.gen.go
@@ -65,9 +65,6 @@ type ServerInterface interface {
 	// Update Task's Title
 	// (PUT /tasks/{id})
 	UpdateTitleTaskById(ctx echo.Context, id openapi_types.UUID) error
-	// Get Tasks By User ID
-	// (GET /tasks/{user_id})
-	GetTasksByUserID(ctx echo.Context, userId openapi_types.UUID) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -166,22 +163,6 @@ func (w *ServerInterfaceWrapper) UpdateTitleTaskById(ctx echo.Context) error {
 	return err
 }
 
-// GetTasksByUserID converts echo context to params.
-func (w *ServerInterfaceWrapper) GetTasksByUserID(ctx echo.Context) error {
-	var err error
-	// ------------- Path parameter "user_id" -------------
-	var userId openapi_types.UUID
-
-	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
-	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
-	}
-
-	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.GetTasksByUserID(ctx, userId)
-	return err
-}
-
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -216,7 +197,6 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/tasks/:id", wrapper.GetTaskById)
 	router.PATCH(baseURL+"/tasks/:id", wrapper.UpdateTaskCompletedById)
 	router.PUT(baseURL+"/tasks/:id", wrapper.UpdateTitleTaskById)
-	router.GET(baseURL+"/tasks/:user_id", wrapper.GetTasksByUserID)
 
 }
 
@@ -322,23 +302,6 @@ func (response UpdateTitleTaskById200JSONResponse) VisitUpdateTitleTaskByIdRespo
 	return json.NewEncoder(w).Encode(response)
 }
 
-type GetTasksByUserIDRequestObject struct {
-	UserId openapi_types.UUID `json:"user_id"`
-}
-
-type GetTasksByUserIDResponseObject interface {
-	VisitGetTasksByUserIDResponse(w http.ResponseWriter) error
-}
-
-type GetTasksByUserID200JSONResponse []Task
-
-func (response GetTasksByUserID200JSONResponse) VisitGetTasksByUserIDResponse(w http.ResponseWriter) error {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(200)
-
-	return json.NewEncoder(w).Encode(response)
-}
-
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get All Tasks
@@ -359,9 +322,6 @@ type StrictServerInterface interface {
 	// Update Task's Title
 	// (PUT /tasks/{id})
 	UpdateTitleTaskById(ctx context.Context, request UpdateTitleTaskByIdRequestObject) (UpdateTitleTaskByIdResponseObject, error)
-	// Get Tasks By User ID
-	// (GET /tasks/{user_id})
-	GetTasksByUserID(ctx context.Context, request GetTasksByUserIDRequestObject) (GetTasksByUserIDResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -530,31 +490,6 @@ func (sh *strictHandler) UpdateTitleTaskById(ctx echo.Context, id openapi_types.
 		return err
 	} else if validResponse, ok := response.(UpdateTitleTaskByIdResponseObject); ok {
 		return validResponse.VisitUpdateTitleTaskByIdResponse(ctx.Response())
-	} else if response != nil {
-		return fmt.Errorf("unexpected response type: %T", response)
-	}
-	return nil
-}
-
-// GetTasksByUserID operation middleware
-func (sh *strictHandler) GetTasksByUserID(ctx echo.Context, userId openapi_types.UUID) error {
-	var request GetTasksByUserIDRequestObject
-
-	request.UserId = userId
-
-	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
-		return sh.ssi.GetTasksByUserID(ctx.Request().Context(), request.(GetTasksByUserIDRequestObject))
-	}
-	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "GetTasksByUserID")
-	}
-
-	response, err := handler(ctx, request)
-
-	if err != nil {
-		return err
-	} else if validResponse, ok := response.(GetTasksByUserIDResponseObject); ok {
-		return validResponse.VisitGetTasksByUserIDResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
